web/themes/contrib/porto_theme/css/custom-user.css
/* ... */
.page-node-type-foto-a-galeriahoz .gallery-grid-item > a:hover img {
    -webkit-transform: scale(1.1,1.1);
    -moz-transform: scale(1.1,1.1);
    -ms-transform: scale(1.1,1.1);
    -o-transform: scale(1.1,1.1);
    transform: scale(1.1,1.1);
    transition: all 300ms ease 0ms;
}

/* Galéria Facet CSS-ek */
.facetapi-processed {
    float: none !important;
    margin: 5px auto;
}
.facetapi-processed.pagination-lg > li > a,
.facetapi-processed.pagination-lg > li > span {
    display: inline;
    padding: 8px;
    font-size: 95%;
    font-weight: 400;
    line-height: 1;
    color: #fff;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 0;
    background-color: #ac9b63;
    margin: 2px 1px;
    border: 1px solid #ac9b63;
}
.facetapi-processed.pagination-lg > li > a:hover,
.facetapi-processed.pagination-lg > li > span {
    background-color: #fff;
border: 1px solid #ac9b63;
  color: #ac9b63;
}
.facetapi-processed.pagination-lg > li > span {
    margin-right: 150px;
}
.facetapi-processed.pagination-lg > li > span> a.facetapi-active {
    color: #fff;
}
.facetapi-processed.pagination-lg > li > span> a.facetapi-active:hover {
    color: #000;
}
.block-facetapi h4 {
    min-height: 1.3em;
    margin-bottom: 0px;
}
.block-facetapi .content {
    margin-bottom: 20px;
}


/* Nyito oldali CSS-ek  */


.frontpage  .col-md-8 {
        width: 100%;
        padding: 20px 18px;

 }

.panels-flexible-region-44-center {
    float: left;
    width: 100%;
}

section.section {
    background: #eee;
    padding-top:0px;
}

.frontpage .col-md-4 {
    width: 100%;
    padding-left: 0px;
    padding-right:0px;
}


.frontpage .col-sm-4 {
    background-color: white;
    margin: 8px;
    padding-right: 0px;
    padding-left: 0px;
}

.frontpage .row {
    margin-right: 0px;
    margin-left: 0px;
}


h4 {
    font-size: 19px;
    line-height: 22px;
    margin-bottom: 8px;
    color: #003768;
    min-height: 44px;
    overflow: hidden;
}

.frontpage .img-max img {
    min-width: 100%;
}



@media (min-width: 992px)
{
    .frontpage .col-sm-4 {
        width: 31%;
    }

    .frontpage .col-md-8 {
        width: 100%;
        height: 300px;
        padding: 30px 25px;
    }
}

@media (min-width: 768px)
{
    .frontpage .col-sm-4 {
        width: 47%;
    }

}


@media (min-width: 992px) {
#header .header-nav-main nav > ul > li > span{
    color: #fff;
    border-radius: 0px;
    font-size: 15px;
    font-style: normal;
    font-weight: 300;
    letter-spacing:1px;
    line-height: 20px;
    padding: 10px 13px;
    text-transform: uppercase;
    position: relative;
    display: block;
}
}

@media (min-width: 992px) {
#header .header-nav-main nav > ul > li:hover > span{
    background: #ac9c63;
    color: #FFF;
}
}
/*Módósítva 2022-06-10*/
@media (max-width: 991px) {
#header .header-nav-main nav > ul > li > span{
    color: #fff;
    text-transform: uppercase;
    font-weight: normal;
    margin-top: 1px;
    margin-bottom: 1px;
    font-size: 15px;
    font-style: normal;
    line-height: 45px;
    padding: 7px 8px;
    margin: 1px 0;
    border-radius: 4px;
}
}

@media (min-width: 992px){
.view-index-gallery .col-md-6 {
    width: 50% !important;
}
}

#edit-submitted-csatolmany-feltoltese-ajax-wrapper .description {
   display: none;
}
#edit-submitted-csatolmany-feltoltese-upload {
   float: left;
}

/* Blog  */
.post-meta-user {display: none !important}
.post-meta-comments {display: none !important}
.post-block .post-author {display: none !important}
.post-meta {margin-bottom: 40px !important}
.post-author {display: none !important}

.field-name-field-kepek .field-item {float: left; padding-right: 40px;padding-bottom: 20px;}

.myButton {
	background-color:#ac9c58;
	border-radius:0px;
	border:1px solid #ac9c58;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-size:18px;
        text-transform:uppercase;
	font-weight:normal;
	padding:12px 15px;
	text-decoration:none;
	text-shadow:none;
}
.myButton:hover {
	background-color:#fff;
        text-decoration: none;
        border:1px solid #ac9c58;
        color: #ac9c58;
}
.myButton:active {
	position:relative;
	top:1px;
}

.box-right {
     float: right;
     width: 30%;
     background-color: rgb(216, 226, 232);
     margin-left: 10px;
     padding: 5px;
}

ul {padding-left: 20px;}

.region-before-content {margin-bottom: 25px;}

/* Hide exposed filter form on gallery page */
.view-index-gallery .views-exposed-form {
  display: none !important;
}

/* Gallery intro styling */
.gallery-intro {
  background: #f8f8f8;
  padding: 30px;
  margin-bottom: 40px;
  border-radius: 5px;
}

.gallery-intro .lead {
  font-size: 1.3em;
  margin: 20px 0;
  text-align: center;
}

.gallery-stats {
  margin: 30px 0 !important;
  text-align: center;
}

.gallery-stats > div > div {
  padding: 20px;
  border: 2px solid #ac9c58;
  margin: 10px;
  border-radius: 5px;
  transition: all 0.3s;
  min-height: 120px;
}

.gallery-stats > div > div:hover {
  background-color: #ac9c58;
  color: white;
  transform: translateY(-5px);
  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
}

.gallery-stats > div > div strong {
  font-size: 2.5em;
  color: #ac9c58;
  display: block;
  margin-bottom: 5px;
}

.gallery-stats > div > div:hover strong {
  color: white;
}

/* Facet blocks styling */
.block-facet--links h2 {
  background-color: #ac9c58;
  color: white;
  padding: 10px 15px;
  margin-top: 20px;
  font-size: 1.1em;
}

.facet-inactive ul,
.facet-active ul {
  list-style: none;
  padding: 0;
  margin: 0;
  background: white;
}

.facet-inactive li,
.facet-active li {
  border-bottom: 1px solid #eee;
}

.facet-inactive li a,
.facet-active li a {
  display: block;
  padding: 8px 15px;
  text-decoration: none;
  transition: all 0.2s;
  color: #333;
}

.facet-inactive li a:hover,
.facet-active li a:hover {
  background-color: #f5f5f5;
  padding-left: 20px;
}

.facet-item__count {
  float: right;
  color: #999;
  font-size: 0.9em;
}
/* ... */

